--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="bio">Bacon ipsum dolor amet corned beef kevin filet mignon sirloin jowl. Ball tip leberkas venison ham spare ribs, short loin tongue burgdoggen strip steak brisket porchetta prosciutto. Short loin shankle t-bone, capicola boudin cupim burgdoggen pork loin drumstick ham hock cow. Boudin alcatra sausage fatback tenderloin venison tri-tip ribeye jerky leberkas. Swine bacon ground round shoulder porchetta, pastrami frankfurter.
 
 Sirloin ground round hamburger chicken cupim porchetta shankle capicola pork belly chuck corned beef pork loin meatball landjaeger. Hamburger cupim salami ribeye meatball filet mignon strip steak brisket turducken ground round burgdoggen biltong ball tip. Flank pork chop ribeye meatball picanha meatloaf biltong. Jerky beef ribs doner ball tip. Sausage frankfurter picanha ham hock hamburger biltong, jerky kielbasa alcatra porchetta flank strip steak bresaola turducken beef.</string>
+    <string name="what_is_your_nickname">What is your nickname?</string>
 </resources>
