Added a Done button, and a textfield to display the submitted nickname.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
 Sirloin ground round hamburger chicken cupim porchetta shankle capicola pork belly chuck corned beef pork loin meatball landjaeger. Hamburger cupim salami ribeye meatball filet mignon strip steak brisket turducken ground round burgdoggen biltong ball tip. Flank pork chop ribeye meatball picanha meatloaf biltong. Jerky beef ribs doner ball tip. Sausage frankfurter picanha ham hock hamburger biltong, jerky kielbasa alcatra porchetta flank strip steak bresaola turducken beef.</string>
     <string name="what_is_your_nickname">What is your nickname?</string>
+    <string name="done">Done</string>
 </resources>
